GsApp: Notify property changes in an idle callback

This makes sure the notify:: callbacks in the UI code get invoked in the
main thread. Without doing so, we can end up calling gtk+ functions from
the plugin thread in response to GsApp property changes.

https://bugzilla.redhat.com/show_bug.cgi?id=1082833

https://bugzilla.gnome.org/show_bug.cgi?id=727823